tests/errors/semantic/blocking/INHOMOG_LIST.py
# Inhomogeneous lists are not supported by Pyccel. Please use a tuple
# pylint: disable=missing-function-docstring, missing-module-docstring
x = [2,"two"]
print(x)
